--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,10 +21,17 @@ opensearch-py = "^2.3.2"
 tqdm = "^4.66.1"
 psycopg = {extras = ["binary"], version = "^3.1.17"}
 pgvector = "^0.2.4"
+doris-vector-search = "*"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^2.20.0"
 pytest = "^7.1"
+
+
+[[tool.poetry.source]]
+name = "tencent"
+url = "http://mirrors.tencentyun.com/pypi/simple"
+priority = "primary"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
